small css overlap fix

--- a/src/view/css/emu-dide.css
+++ b/src/view/css/emu-dide.css
@@ -1,10 +1,8 @@
-/*
- * Base structure
- */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
+  
 }
 
 .nav a {
@@ -13,7 +11,7 @@ body {
 .navbar-brand {
   font-size: 1.6em;
   font-weight: bold;
-
+  
 }
 .side-pane {
     position: fixed;
@@ -58,6 +56,7 @@ body {
   bottom: 0;
   left:0;
   padding: 0;
+  padding-right:400px;
   display:block;
 }
 
